tax-control dropdown z-index issue fix

--- a/apps/web-giddh/src/app/theme/tax-control/tax-control.component.scss
+++ b/apps/web-giddh/src/app/theme/tax-control/tax-control.component.scss
@@ -7,7 +7,7 @@
     height: inherit;
     padding: 0;
     overflow: auto;
-    z-index: 1;
+    z-index: 9;
 }
 
 .fake-label {
